--- a/oradb-create/templates/init.ora.12.1.0.2.j2
+++ b/oradb-create/templates/init.ora.12.1.0.2.j2
@@ -11,14 +11,14 @@ remote_login_passwordfile=EXCLUSIVE
 dispatchers="(PROTOCOL=TCP) (SERVICE={{ item.0.oracle_db_name }}XDB)"
 undo_tablespace=UNDOTBS1
 
-control_files='+DATA/{{ item.0.oracle_db_name }}/control01.ctl','+FRA/{{ item.0.oracle_db_name }}/control02.ctl'
+control_files='+{{ oracle_dbf_dir_asm }}/{{ item.0.oracle_db_name }}/control01.ctl','+{{ oracle_reco_dir_asm }}/{{ item.0.oracle_db_name }}/control02.ctl'
 
 
 processes=300
 pga_aggregate_target=360m
 sga_target=1080m
 
-db_create_file_dest="+DATA"
-db_recovery_file_dest="+FRA"
+db_create_file_dest="+{{ oracle_dbf_dir_asm }}"
+db_recovery_file_dest="+{{ oracle_reco_dir_asm }}"
 
 enable_pluggable_database=true
